--- a/posts/another-post-in-the-wall.mdx
+++ b/posts/another-post-in-the-wall.mdx
@@ -1,11 +1,8 @@
 ---
-title: How to create SVG-ready icon symbols in Sketch PART 1
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
-date: May 4 2021
+title: saste nashe
+description: "lollolol upon."
+date: May 4 2029
 ---
 
-This is an example post, with a [link](https://nextjs.org) and a React component:
+This is an example post, 
 
-The title and description are pulled from the MDX file and processed using `gray-matter`. Additionally, links are rendered using a custom component passed to `next-mdx-remote`.
-
-Go back [home](/).
